--- a/src/lists/project_list.json
+++ b/src/lists/project_list.json
@@ -21,7 +21,7 @@
         "link": "https://github.com/blahnikkai/binomial-machine/",
         "title": "Python, Matplotlib, Tkinter",
         "tech": "Javascript, HTML, CSS",
-        "desc": ""
+        "desc": "Create and visualize a binomial distribution by defining a mean and standard deviation, find exact and cumulative probabilities within a binomial distribution, see the normal distribution approximation, and simulate Bernoulli trials."
     },
     {
         "img_name": "pandemic_simulator.png",
