change 'contacts' to 'contact info' in personal website project description

--- a/src/lists/project_list.json
+++ b/src/lists/project_list.json
@@ -37,6 +37,6 @@
         "link": "/",
         "title": "Blahnik.ai",
         "tech": "React, Javascript, HTML, CSS",
-        "desc": "Personal portfolio website. See my projects, experience, and contacts."
+        "desc": "Personal portfolio website. See my projects, experience, and contact information."
     }
 ]
