Fix typo in Optimal Odyssey project description

--- a/src/lists/project_list.json
+++ b/src/lists/project_list.json
@@ -51,6 +51,6 @@
         "title": "Optimal Odyssey",
         "tech": "React, Cesium, Javascript, HTML, CSS",
         "on_homepage": true,
-        "desc": "Animate the solution to the traveling salesperson problem with Held-Karp, which uses bitmask dynamic programming to find an exact soluton. Compare this to a quick approximation found by the nearest neighbor heuristic. Allow users to manually solve the problem themselves."
+        "desc": "Animate the solution to the traveling salesperson problem with Held-Karp, which uses bitmask dynamic programming to find an exact solution. Compare this to a quick approximation found by the nearest neighbor heuristic. Allow users to manually solve the problem themselves."
     }
 ]
