--- a/src/lists/project_list.json
+++ b/src/lists/project_list.json
@@ -6,7 +6,11 @@
         "title": "Advanced Maze Solver",
         "tech": "Javascript, HTML, CSS",
         "on_homepage": true,
-        "desc": "Find a path in a maze from a startpoint to endpoint with depth-first, breadth-first, and A* search algorithms."
+        "desc": [
+            "Find a path in a maze from a startpoint to endpoint with depth-first, breadth-first, and A* search algorithms.",
+            "Generate a maze with a randomized form of Prim's or Kruskal's algorithms",
+            "Create a custom maze and see how the algorithms solve them"
+        ]
     },
     {
         "img_name": "graph_generator.png",
@@ -15,7 +19,11 @@
         "title": "Graph Generator",
         "tech": "Javascript, HTML, CSS",
         "on_homepage": true,
-        "desc": "Place points and animate the creation of a convex hull or a minimum spanning tree with weights based on Euclidian distance."
+        "desc": [
+            "Place points and animate the creation of a convex hull with Graham's scan",
+            "Visualize how Prim's and Kruskal's algorithms build minimum spanning trees with weights based on Euclidean distance.",
+            "Solve the traveling salesperson problem (TSP) with Euclidean edge weights"
+        ]
     },
     {
         "img_name": "binomial_machine.png",
@@ -24,7 +32,12 @@
         "title": "Binomial Machine",
         "tech": "Python, Matplotlib, Tkinter",
         "on_homepage": true,
-        "desc": "Create and visualize a binomial distribution by defining a mean and standard deviation, find exact and cumulative probabilities within a binomial distribution, see the normal distribution approximation, and simulate Bernoulli trials."
+        "desc": [
+            "Create and visualize a binomial distribution by defining a mean and standard deviation.",
+            "Find exact and cumulative probabilities within a binomial distribution",
+            "See the normal distribution approximation for a binomial distribution.", 
+            "Simulate Bernoulli trials and observe as they approach the theoretical distribution with more trials"
+        ]
     },
     {
         "img_name": "pandemic_simulator.png",
@@ -33,7 +46,11 @@
         "title": "Pandemic Simulator",
         "tech": "Java, JavaFX",
         "on_homepage": true,
-        "desc": "Simulate a pandemic spreading throughout a population. Physically divide areas by drawing walls."
+        "desc": [
+            "Simulate a pandemic spreading throughout a population.",
+            "Observe how manipulating different parameters, such as infection rate and mortality rate, affect the impact of the disease",
+            "Physically divide areas by drawing walls."
+        ]
     },
     {
         "img_name": "personal_website.png",
@@ -42,7 +59,10 @@
         "title": "Blahnik.ai",
         "tech": "React, Javascript, HTML, CSS",
         "on_homepage": false,
-        "desc": "Personal portfolio website. See my projects, experience, and contact information."
+        "desc": [
+            "Personal portfolio website.",
+            "See my projects, experience, and contact information."
+        ]
     },
     {
         "img_name": "double_pendulum_simulator.png",
@@ -51,7 +71,10 @@
         "title": "Double Pendulum Simulator",
         "tech": "C++, SFML",
         "on_homepage": false,
-        "desc": "Simulate a single and double pendulum using the Euler-Cromer method of numeric integration. Add pendulums with different lengths, masses, and initial angles."
+        "desc": [
+            "Simulate a single and double pendulum using the Euler-Cromer method of numeric integration.",
+            "Add pendulums with different lengths, masses, and initial angles."
+        ]
     },
     {
         "img_name": "optimal_odyssey.png",
@@ -60,6 +83,11 @@
         "title": "Optimal Odyssey",
         "tech": "React, Cesium, Javascript, HTML, CSS",
         "on_homepage": true,
-        "desc": "Animate the solution to the traveling salesperson problem with Held-Karp, which uses bitmask dynamic programming to find an exact solution. Compare this to a quick approximation found by the nearest neighbor heuristic. Allow users to manually solve the problem themselves."
+        "desc": [
+            "Select cities on a 3D globe or randomly sample some",
+            "Animate the solution to the traveling salesperson problem (TSP) between these cities with Held-Karp, which uses bitmask dynamic programming to find an exact solution.",
+            "Compare the optimal solution to a faster approximation found by the nearest neighbor heuristic.",
+            "Allow users to manually solve the TSP themselves."
+        ]
     }
 ]
